--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "opencode-quota",
+  "name": "@slkiser/opencode-quota",
   "version": "1.0.0",
   "description": "Show quota status in OpenCode without LLM invocation. Toast + usage reports across providers.",
   "type": "module",
@@ -40,8 +40,12 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "git+https://github.com/slkiser/opencode-quota.git"
   },
+  "bugs": {
+    "url": "https://github.com/slkiser/opencode-quota/issues"
+  },
+  "homepage": "https://github.com/slkiser/opencode-quota#readme",
   "devDependencies": {
     "@opencode-ai/plugin": "^1.1.14",
     "@types/node": "^22.0.0",
