--- a/.github/workflows/publish-npm.yml
+++ b/.github/workflows/publish-npm.yml
@@ -39,7 +39,7 @@ jobs:
         if: github.event_name == 'release'
         run: |
           TAG="${{ github.event.release.tag_name }}"
-          VERSION="v$(node -p \"require('./package.json').version\")"
+          VERSION="v$(node -p 'require("./package.json").version')"
           if [ "$TAG" != "$VERSION" ]; then
             echo "Release tag ($TAG) does not match package.json version ($VERSION)"
             exit 1
